[project]
name = "tdsproject2"
version = "0.1.0"
description = "LLM Analysis Quiz Solver"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.1",

    "langgraph>=1.0.3",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.7",
    "langchain-google-genai>=1.0.0",
    "google-genai>=0.17.0",

    "playwright>=1.56.0",
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",

    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",
    "networkx>=3.6",
    "duckdb>=1.4.2",

    "matplotlib>=3.10.7",
    "pillow>=12.0.0",

    "pypdf>=6.4.0",
    "pypdf2>=3.0.1",

    "pytesseract>=0.3.13",
    "speechrecognition>=3.14.4",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",

    "geopy>=2.4.1",
    "haversine>=2.9.0",

    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.3",
]
